--- a/styles/comments.css
+++ b/styles/comments.css
@@ -1,9 +1,11 @@
-.create-comment>.form>textarea {
+.create-comment>.form>.textarea {
     resize: none;
-    width: 100px;
-    height: 100px;
-    margin-top: 22px;
-    margin-bottom: 28px;
+    width: 700px;
+    height: 40px;
+    font-size: 22px;
+    border-radius: 20px;
+    margin-top: 3px;
+    margin-bottom: 3px;
     padding: 5px;
 }
 
@@ -11,19 +13,21 @@
     padding-right: 13px;
     margin-right: 13px;
     display: table-cell;
+    color: whitesmoke;
 }
 
 .create-comment {
-    margin-top: 60px;
+    margin-top: 10px;
     position: relative;
     text-align: center;
-    width: 700px;
-    height: auto;
+    width: 750px;
+    height: 156px;
     border-radius: 20px;
-    padding: 40px;
+    padding: 4px;
     box-sizing: border-box;
-    background: #6f5d9c;
+    background: rgba(75, 114, 184, 0.72);
     box-shadow: 0px 0px 32px 0px #32485e, -14px -14px 20px #191c21;
+    margin-bottom: 50px;
 }
 
 .create-comment>label {
@@ -32,27 +36,47 @@
     text-align: center;
     font-weight: 700;
     line-height: normal;
+
 }
 
 .info-section>.details-comments li {
-    width: 400px;
+    width: 350px;
     display: inline-block;
     position: static;
-    margin: 20px auto 25px auto;
-    box-shadow: 8px 8px 8px 0 rgba(0, 0, 0, 0.2), 12px 12px 20px 0 rgba(0, 0, 0, 0.19);
+    margin: 20px auto 25px 65px;
+    box-shadow: 8px 8px 8px 0 rgba(0, 0, 0, 0.2), 12px 12px 20px 0 rgba(0.2, 0, 0, 0.19);
     border-radius: 16px;
-    margin-left: 60px;
-    background: #6f5d9c;
+    background: rgb(91, 152, 196);
     color: white;
 }
 
 .comment p {
-    padding: 16px;
+    margin-top: 10px;
+    padding: 4px;
 }
 
 
 .create-comment>.button:hover {
     background-color: #41425c;
-    color: white;
+    color: #9598d2;
     cursor: pointer;
+}
+
+.btn.comment {
+    margin-top: 15px;
+    background: rgb(91, 152, 196);
+    height: 33px;
+    width: 350px;
+    border-radius: 20px;
+    color: white;
+    font-size: 22px;
+    cursor: pointer;
+    font-weight: 900;
+    box-shadow: 2px 2px 2px #a6a6a6, -2px -2px 2px #a6a6a6;
+    transition: 0.5s;
+}
+
+.btn.comment:hover {
+    color: white;
+    background-color: #8fa9b9;
 }
