--- a/styles/details.css
+++ b/styles/details.css
@@ -2,10 +2,12 @@
     position: relative;
     display: block;
     width: 980px;
-    margin: 40px auto;
+    margin-top: 20px;
+    margin-bottom: 5px;
     overflow: hidden;
     border-radius: 10px;
     transition: all 0.4s;
+    background-color: rgba(160, 163, 255, 0.5);
 }
 
 #game-details>h1 {
@@ -16,16 +18,18 @@
     margin-bottom: 40px;
     text-transform: uppercase;
     text-align: center;
+    background-color: rgba(32, 32, 53, 0.56);
 }
 
 .info-section {
+    margin-top: 2px;
     position: relative;
     width: 100%;
     height: 100%;
     background-blend-mode: multiply;
     z-index: 2;
     border-radius: 10px;
-    background-color: whitesmoke;
+    background-color: rgba(160, 163, 255, 0);
 }
 
 .game-header {
@@ -34,15 +38,14 @@
     height: 40%;
 }
 
-.game_header>h1 {
-    color: black;
-    margin-top: 5px;
-    font-size: 36px;
+.game-header>h1 {
+    color: #ffffff;
+    font-size: 32px;
     font-weight: 400;
 }
 
 .game_header>h4 {
-    color: #555;
+    color: #fff9f9;
     font-size: 23px;
     font-weight: 400;
 }
@@ -59,7 +62,8 @@
 
 .type {
     display: inline-block;
-    color: #959595;
+    text-align: center;
+    color: #d9d9d9;
     font-size: 19px;
     margin-left: 10px;
 }
@@ -68,6 +72,7 @@
     position: relative;
     margin-left: 15px;
     margin-right: 22px;
+    width: 600px;
     height: 330px;
     border-radius: 4%;
     box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.5);
@@ -122,11 +127,28 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 60%;
+    width: 73%;
 }
 
 .button:hover {
     background-color: #6f5d9c;
     color: white;
+}
+
+.like-button {
+    height: 15%;
+    background-color: #e21e4a;
+    padding: 14px;
+    margin-top: auto;
+    font-size: 21px;
+    color: rgb(255, 255, 255);
+}
+
+.likes-header {
+    height: 15%;
+    padding: 14px;
+    margin-top: auto;
+    font-size: 21px;
+    color: rgb(255, 255, 255);
 }
 
