--- a/styles/details.css
+++ b/styles/details.css
@@ -159,3 +159,19 @@
     color: rgb(255, 255, 255);
 }
 
+.unlike-button {
+    height: 15%;
+    background-color: #d98497;
+    border-radius: 13px;
+    padding: 14px;
+    margin-top: auto;
+    font-size: 21px;
+    color: rgb(255, 255, 255);
+}
+
+.unlike-button:hover {
+    background-color: #9c1822;
+    color: white;
+}
+
+
